Fixed event calander. just minor error. working on card collapsing for FAQ

--- a/WebPage/GGCHacks/src/app/admindashboard/admindashboard.component.css
+++ b/WebPage/GGCHacks/src/app/admindashboard/admindashboard.component.css
@@ -1,5 +1,5 @@
 .accounts{
-  margin: 10%;
+  margin: 3%;
   padding: 3%;
   background-color: #ccf0e4;
   width: calc(100% - 5px);
